fix project card alignment

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 .Footer {
     min-height: 50vh;
     background: rgb(103,103,103);
-    background: linear-gradient(0deg, rgba(103,103,103,1) 0%, rgba(0,0,0,1) 30%);
+    background: linear-gradient(0deg, rgba(103,103,103,1) 0%, rgba(0,0,0,1) 20%);
     display: flex;
     flex-direction: column;
     align-items: center;
