--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -17,6 +17,7 @@
   margin-top: 4%;
   box-shadow: inset 0 0 0 0 #54b3d6;
   transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  text-decoration: none;
 }
 
 .home-button:hover {
@@ -36,6 +37,7 @@
   font-size: medium;
   box-shadow: inset 0 0 0 0 #54b3d6;
   transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  text-decoration: none;
 }
 
 .contact-button {
