--- a/src/Components/ProjectCard/ProjectCard.scss
+++ b/src/Components/ProjectCard/ProjectCard.scss
@@ -21,10 +21,16 @@
 }
 
 .title-container {
+    width: 90%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-left: 5%;
     margin-right: 5%;
+}
+
+.project-title {
+    margin: 0;
 }
 
 .overview-container {
@@ -48,11 +54,11 @@
 }
 
 .single-skill {
-    margin-left: 5%;
+    margin-left: 4%;
 }
 
 .skill-text {
-    margin:0
+    margin:0;
 }
 
 .project-link {
